--- a/views/duty-handover-view.ejs
+++ b/views/duty-handover-view.ejs
@@ -284,4 +284,4 @@
   </div>
 </div>
 
-<%-include("partials/navbar-script.ejs") %> <%-include("partials/footer") %>
+<%-include("partials/navbar-script") %> <%-include("partials/footer") %>
