--- a/views/example.ejs
+++ b/views/example.ejs
@@ -1,97 +1,7 @@
-<li class=" nav-item dropdown"><a class="dropdown-item dropdown-toggle" id="authentication" href="#"
-  data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-  <span class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"></span><span>Authentication</span>
-</a>
-<ul class="dropdown-menu">
-  <li class="dropdown"><a class="dropdown-item dropdown-toggle" id="simple" href="#" data-bs-toggle="dropdown"
-      data-bs-auto-close="outside" aria-expanded="false">
-      <div class="dropdown-item-wrapper"><span
-          class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"></span><span><span
-            class="me-2 uil"></span>Simple</span></div>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="pages/authentication/simple/sign-in.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign in</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/simple/sign-up.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign up</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/simple/sign-out.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign out</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/simple/forgot-password.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Forgot password</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/simple/reset-password.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Reset password</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/simple/lock-screen.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Lock screen</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/simple/2FA.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>2FA</div>
-        </a></li>
-    </ul>
-  </li>
-  <li class="dropdown"><a class="dropdown-item dropdown-toggle" id="split" href="#" data-bs-toggle="dropdown"
-      data-bs-auto-close="outside" aria-expanded="false">
-      <div class="dropdown-item-wrapper"><span
-          class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"></span><span><span
-            class="me-2 uil"></span>Split</span></div>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="pages/authentication/split/sign-in.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign in</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/split/sign-up.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign up</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/split/sign-out.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign out</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/split/forgot-password.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Forgot password</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/split/reset-password.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Reset password</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/split/lock-screen.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Lock screen</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/split/2FA.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>2FA</div>
-        </a></li>
-    </ul>
-  </li>
-  <li class="dropdown"><a class="dropdown-item dropdown-toggle" id="Card" href="#" data-bs-toggle="dropdown"
-      data-bs-auto-close="outside" aria-expanded="false">
-      <div class="dropdown-item-wrapper"><span
-          class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"></span><span><span
-            class="me-2 uil"></span>Card</span></div>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="pages/authentication/card/sign-in.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign in</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/card/sign-up.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign up</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/card/sign-out.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Sign out</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/card/forgot-password.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Forgot password</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/card/reset-password.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Reset password</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/card/lock-screen.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>Lock screen</div>
-        </a></li>
-      <li><a class="dropdown-item" href="pages/authentication/card/2FA.html">
-          <div class="dropdown-item-wrapper"><span class="me-2 uil"></span>2FA</div>
-        </a></li>
-    </ul>
-  </li>
-</ul>
-</li>
+<%- include("partials/header") %> <%- include("partials/navbar") %>
+
+<div class="content">
+  <script src="/assets/three.js"></script>
+</div>
+
+<%- include("partials/navbar-script") %> <%- include("partials/footer") %>
