--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -70,6 +70,8 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <!-- three js -->
+  <script src="https://threejs.org/build/three.min.js"></script>
 </head>
 
 <body>
