added the shift member part

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -6,3 +6,11 @@
 /* -------------------------------------------------------------------------- */
 /* prettier-ignore */
 /* ----------------------------- Phoenix-buttons ---------------------------- *//*# sourceMappingURL=user.css.map */
+
+/* eslint-disable css-propertyvalueexpected */
+/* eslint-disable css-ruleorselectorexpected */
+
+/* Your CSS code here */
+
+/* eslint-enable css-propertyvalueexpected */
+/* eslint-enable css-ruleorselectorexpected */
