--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -72,6 +72,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <!-- three js -->
   <script src="https://threejs.org/build/three.min.js"></script>
+  <!-- echarts -->
+  <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
 </head>
 
 <body>
