--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -73,9 +73,23 @@
         <div class="col-12">
           <div class="container">
             <div class="">
-              <% var display = ""; %>
+              <% 
+              var display = "";
+              
+              // Function to get today's date in the format "DD/MM/YY"
+              function getTodayDate() {
+              const today = new Date();
+              const day = String(today.getDate()).padStart(2, '0');
+              const month = String(today.getMonth() + 1).padStart(2, '0'); // Month is zero-based
+              const year = today.getFullYear().toString().substr(-2);
+              return `${day}/${month}/${year}`;
+              }
+
+              const todayDate = getTodayDate();
+
+              %>
               <% cycle.forEach((cycle, index) => { %>
-              <% if(currentTimeSlot === cycle.timeSlot){
+              <% if(currentTimeSlot === cycle.timeSlot && todayDate === patrolReport.date){
                 display = "d-block";
               }else {
                 display = "d-none";
@@ -281,7 +295,8 @@
             </div>
           </div>
           <% } %>
-          <div class="px-5 py-3 px-md-6 mt-3 mb-9">
+          <div class="mt-1 mb-3">
+            <a role="button" class="btn btn-phoenix-primary bg-transparent border border-0 mx-2" id="addFiles" data-bs-toggle="modal" data-bs-target="#verticallyCentered">Add files +</a>
           </div>
         </div>
       </div>
@@ -305,7 +320,7 @@
             <textarea class="form-control scrollbar-overlay mb-3" id="notesInput" placeholder="Leave a note here" style="height: 75px" name="notes"></textarea>
           </div>
 
-          <input type="text" style="display: none" value="<%= reportId %>" name="confirmRid" />
+          <input type="text" style="display: none" value="<%= patrolReport.reportId %>" name="confirmRid" />
 
           <button class="btn btn-primary myButton" type="submit" id="updateNotes">
             <div class="btn-content">Update</div>
@@ -322,6 +337,87 @@
         <div class="d-flex justify-content-between">
           <div class="toast-body px-0 py-3">
             <code id="notesAlertContent" class="text-white"></code>
+          </div>
+
+          <button class="btn ms-2 p-0 btn-close-white" type="button" data-bs-dismiss="toast" aria-label="Close">
+            <span class="uil uil-times fs-1"></span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- modal for upload files -->
+<div class="modal fade scrollbar-overlay" id="verticallyCentered" tabindex="-1" aria-labelledby="verticallyCenteredModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content">
+      <div class="modal-header border border-0">
+        <h5 class="modal-title" id="verticallyCenteredModalLabel">
+          Upload Files
+        </h5>
+        <button class="btn p-1" type="button" data-bs-dismiss="modal" aria-label="Close">
+          <span class="fas fa-times fs--1"></span>
+        </button>
+      </div>
+
+      <div class="modal-body p-3">
+        <!-- file uploader -->
+        <!-- data-options are the setting for dropzone can find the settings also inside -->
+        <form class="dropzone dropzone-multiple p-0 mb-4" id="myDropzone" data-dropzone="data-dropzone" action="/upload-case" data-options='{"url":"/upload-case","paramName": "file"}'>
+          <div class="dz-message" data-dz-message="data-dz-message">
+            <img class="me-2" src="../../../assets/img/icons/cloud-upload.svg" width="25" alt="" />Drop your files here
+          </div>
+          <div class="dz-preview dz-preview-multiple m-0 d-flex flex-column">
+            <div class="d-flex mb-3 pb-3 border-bottom media">
+              <div class="border border-300 p-2 rounded-2 me-2">
+                <img class="rounded-2 dz-image" src="../../../assets/img/icons/file.png" alt="..." data-dz-thumbnail="data-dz-thumbnail" />
+              </div>
+              <div class="flex-1 d-flex flex-between-center">
+                <div>
+                  <h6 data-dz-name="data-dz-name"></h6>
+                  <div class="d-flex align-items-center">
+                    <p class="mb-0 fs--1 text-400 lh-1" data-dz-size="data-dz-size"></p>
+                    <div class="dz-progress">
+                      <span class="dz-upload" data-dz-uploadprogress=""></span>
+                    </div>
+                  </div>
+                  <span class="fs--2 text-danger" data-dz-errormessage="data-dz-errormessage"></span>
+                </div>
+                <div class="dropdown font-sans-serif">
+                  <button class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal dropdown-caret-none" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="fas fa-ellipsis-h"></span>
+                  </button>
+                  <div class="dropdown-menu dropdown-menu-end border py-2">
+                    <a class="dropdown-item" href="#!" data-dz-remove="data-dz-remove">Remove File</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <input type="text" style="display: none" value="<%= reportId %>" name="fileReportId" />
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary myButton" type="submit" id="uploadButton">
+          <div class="btn-content">
+            <span><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload</span>
+          </div>
+        </button>
+        <button class="btn btn-outline-primary" type="button" data-bs-dismiss="modal">
+          Cancel
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- alert toast upload -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+    <div class="d-flex">
+      <div class="toast align-items-center text-white bg-primary border-0 light" role="alert" data-bs-autohide="false" aria-live="assertive" aria-atomic="true" id="alertUploadToast">
+        <div class="d-flex justify-content-between">
+          <div class="toast-body px-0 py-3">
+            <code id="dropzoneAlertContent" class="text-white"></code>
           </div>
 
           <button class="btn ms-2 p-0 btn-close-white" type="button" data-bs-dismiss="toast" aria-label="Close">
