Shift member part done now check onto profile part

--- a/views/patrol-unit-details.ejs
+++ b/views/patrol-unit-details.ejs
@@ -200,7 +200,7 @@
           <% if(item.fileType===".jpg" || item.fileType===".jepg" || item.fileType===".gif" ||
                                         item.fileType===".bmp" || item.fileType===".png" ) {%>
 
-          <div class="border-top border-300 px-4 px-lg-6 py-4">
+          <div class="border-top border-bottom border-300 px-4 px-lg-6 py-4">
             <div class="me-n3">
               <div class="d-flex flex-between-center">
                 <div class="d-flex mb-1">
@@ -274,12 +274,13 @@
             </div>
           </div>
           <% } %>
-          <div class="px-5 py-3 px-md-6 mt-3 mb-9">
+          <div class="mt-1 mb-3">
+            <a role="button" class="btn btn-phoenix-primary bg-transparent border border-0 mx-2" id="addFiles" data-bs-toggle="modal" data-bs-target="#verticallyCentered">Add files +</a>
           </div>
         </div>
       </div>
     </div>
-    
+
   </div>
 </div>
 
