Retry uploading to new heroku

--- a/views/shift-member-view.ejs
+++ b/views/shift-member-view.ejs
@@ -184,7 +184,7 @@
                 <p class="mb-0 fs--1 text-900"><%= item.date %></p>
               </td>
               <td class="align-middle white-space-nowrap shiftMember ps-3 py-4">
-                <p class="mb-0 fs--1 text-900"><%= item.shiftMember.length %></p>
+                <p class="mb-0 fs--1 text-900"><%= item.staff.length %></p>
               </td>
               <td class="align-middle white-space-nowrap startShift ps-3 py-4">
                 <p class="mb-0 fs--1 text-900"><%= item.startShift %></p>
