--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -93,7 +93,7 @@
                         }else {
                           display = "d-none";
                         } %>
-                <div class="col-12 container mx-auto <%= display %>">
+                <div class="col-12 container mx-auto d-block mb-3">
                   <div class="d-flex justify-content-between">
                     <h2 class="card-title">
                       <div class="d-sm-block d-lg-flex">
@@ -116,7 +116,7 @@
                     icon = "fa-solid fa-check"
                     }
                     %>
-                    <div class="card mb-3 col-12 col-xxl-3 p-4 <%= display %>" style="margin: 0.4rem;">
+                    <div class="card mb-2 col-12 col-xxl-3 p-4 d-block" style="margin: 0.4rem;">
                       <div class="justify-content-between d-flex">
                         <h5 class="card-title"><%= checkpoint.checkpointName %></h5>
                         <div><span class="<%= icon %> <%= textColor %> fs-1"></span></div>
@@ -127,6 +127,7 @@
                         <p class="card-text">Full Name: <%= checkpoint.fullName %></p>
                       </div>
                     </div>
+                    
                     <% if ((checkpointIndex + 1) % 3 === 0) { %>
                   </div>
                   <div class="row justify-content-center">
@@ -141,6 +142,7 @@
                     updateCountdown('<%= cycle.timeSlot %>', 'countdown<%= index %>');
                   }, 1000);
                 </script>
+                <hr>
                 <% }); %>
               </div>
             </div>
