--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -72,7 +72,7 @@
           <div class="col-12">
             <div class="container">
               <div class="row d-flex justify-content-center">
-                <%
+                <% 
                       var display = "";
                 
                       // Function to get today's date in the format "DD/MM/YY"
@@ -93,7 +93,7 @@
                         }else {
                           display = "d-none";
                         } %>
-                <div class="col-12 container mx-auto <%= display %>">
+                <div class="col-12 container mx-auto d-block">
                   <div class="d-flex justify-content-between">
                     <h2 class="card-title">
                       <div class="d-sm-block d-lg-flex">
@@ -116,7 +116,7 @@
                     icon = "fa-solid fa-check"
                     }
                     %>
-                    <div class="card mb-3 col-12 col-xxl-3 p-4 <%= display %>" style="margin: 0.4rem;">
+                    <div class="card mb-3 col-12 col-xxl-3 p-4 d-block" style="margin: 0.4rem;">
                       <div class="justify-content-between d-flex">
                         <h5 class="card-title"><%= checkpoint.checkpointName %></h5>
                         <div><span class="<%= icon %> <%= textColor %> fs-1"></span></div>
@@ -134,7 +134,7 @@
                     <% }); %>
                   </div>
                 </div>
-
+                <hr>
                 <script>
                   // Update countdown for this cycle
                   setInterval(() => {
