--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -11,7 +11,7 @@
               <li class="breadcrumb-item active">Reports</li>
               <li class="breadcrumb-item active">Patrol Report</li>
               <li class="breadcrumb-item active">Shift Member</li>
-              <li class="breadcrumb-item active"><%= patrolReport.location %></li>
+              <li class="breadcrumb-item active"><a role="button" class="" data-bs-toggle="modal" data-bs-target="#modalVideo"><%= patrolReport.location %></a></li>
             </ol>
           </nav>
           <div class="d-flex justify-content-between row g-1">
@@ -59,7 +59,7 @@
                   </div>
                 </div>
                 <div class="col-12">
-                  <div class="progress mb-0 mt-3" style="height:12.5px">
+                  <div class="progress mb-3 mt-3" style="height:12.5px">
                     <div <% /* eslint-disable css-propertyvalueexpected */ %> class="progress-bar rounded-3" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:<%= progressReport %>%;"><%= progressReport %>%</div>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
                   <div class="d-flex justify-content-between">
                     <h2 class="card-title">
                       <div class="d-sm-block d-lg-flex">
-                        <div class="text1">Cycle <%= index+1 %></div>
+                        <div class="text1"><%= todayDate %> <%= index+1 %></div>
                         <div class="text2">&nbsp;<span class="fw-normal text-700 ms-0 fs-1 my-auto">(<%= cycle.timeSlot %>)</span></div>
                       </div>
                     </h2>
@@ -127,7 +127,7 @@
                         <p class="card-text">Full Name: <%= checkpoint.fullName %></p>
                       </div>
                     </div>
-                    
+
                     <% if ((checkpointIndex + 1) % 3 === 0) { %>
                   </div>
                   <div class="row justify-content-center">
@@ -385,6 +385,28 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="modalVideo" tabindex="-1" aria-labelledby="verticallyCenteredModalLabel" aria-hidden="true" style="display: none">
+  <div class="modal-dialog modal-dialog-centered modal-lg modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="videoModalLabel">Fullscreen Video</h5>
+        <button class="btn p-1" type="button" data-bs-dismiss="modal" aria-label="Close">
+          <span class="fas fa-times fs--1"></span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="embed-responsive embed-responsive-16by9">
+          <video class="embed-responsive-item" width="100%" height="100%" autoplay muted>
+            <source src="/video/vid2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- modal for upload files -->
 <div class="modal fade scrollbar-overlay" id="verticallyCentered" tabindex="-1" aria-labelledby="verticallyCenteredModalLabel" aria-hidden="true">
