Retry second time

--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -93,7 +93,7 @@
                         }else {
                           display = "d-none";
                         } %>
-                <div class="col-12 container mx-auto <%= display %>">
+                <div class="col-12 container mx-auto d-block">
                   <div class="d-flex justify-content-between">
                     <h2 class="card-title">
                       <div class="d-sm-block d-lg-flex">
