--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -387,7 +387,7 @@
   <div class="modal-dialog modal-dialog-centered modal-lg modal-sm">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="videoModalLabel">Fullscreen Video</h5>
+        <h5 class="modal-title" id="videoModalLabel">Chcekpoint Demonstration</h5>
         <button class="btn p-1" type="button" data-bs-dismiss="modal" aria-label="Close">
           <span class="fas fa-times fs--1"></span>
         </button>
