Added for submission qr scanner

--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -122,9 +122,9 @@
                         <div><span class="<%= icon %> <%= textColor %> fs-1"></span></div>
                       </div>
                       <div class="card-body p-0">
-                        <p class="card-text">Time: <%= checkpoint.time %></p>
-                        <p class="card-text">Log Report: <%= checkpoint.logReport %></p>
-                        <p class="card-text">Full Name: <%= checkpoint.fullName %></p>
+                        <p class="card-text">Time: <strong><%= checkpoint.time %></strong></p>
+                        <p class="card-text">Log Report: <strong style="font-style: italic;"><%= checkpoint.logReport %></strong></p>
+                        <p class="card-text badge badge-phoenix-primary text-primary ms-n2">PB<%= checkpoint.username %></p>
                       </div>
                     </div>
                     <% if ((checkpointIndex + 1) % 3 === 0) { %>
