--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -124,7 +124,7 @@
                       <div class="card-body p-0">
                         <p class="card-text">Time: <strong><%= checkpoint.time %></strong></p>
                         <p class="card-text">Log Report: <strong style="font-style: italic;"><%= checkpoint.logReport %></strong></p>
-                        <p class="card-text badge badge-phoenix-primary text-primary ms-n2">PB<%= checkpoint.username %></p>
+                        <p class="card-text badge badge-phoenix-primary text-primary ms-n2"><%= checkpoint.username %></p>
                       </div>
                     </div>
                     <% if ((checkpointIndex + 1) % 3 === 0) { %>
