Done for qr scanner

--- a/views/duty-handover-view.ejs
+++ b/views/duty-handover-view.ejs
@@ -215,7 +215,7 @@
             </tr>
             <%  }); %> <% } else { %>
             <tr>
-              <td colspan="7">No case reports submitted.</td>
+              <td colspan="7">No duty handover submitted.</td>
             </tr>
             <% } %>
           </tbody>
